@@ -202,4 +202,12 @@
       handler="minaraad.projects.migration.apply_types_fixes"
       profile="minaraad.projects:default" />
 
+  <genericsetup:upgradeStep
+      title="Update control panel configlets"
+      description=""
+      source="1024"
+      destination="1025"
+      handler="minaraad.projects.migration.update_controlpanel"
+      profile="minaraad.projects:default" />
+
 </configure>
